[tool.poetry]
name = "huffman"
version = "0.1.0"
description = "Huffman (de)compression and visualisation"
authors = ["mrlegohead0x45 <mrlegohead0x45@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

pydot = { version = "^1.4.2", optional = true}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[tool.poetry.extras]
vis = ["pydot"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
